== 0.1.7.6 (Not released)

* Support for cucumber
* Fixed issue in daemon_kit:upgrade task
* Moved rspec generator into new home
* Removed conflicting rubigen generator, messed with our script directory

== 0.1.7.5 2009-06-08

* New AbstractLogger
** Default Logger backend
** SysLogLogger support
* More documentation

== 0.1.7.4 2009-06-05

* Fixed bug with control script generator (thanks Sho Fukamachi)
* Enhanced deploy.rb template to check for current dk gem verion,
  unless vendored
* Fix bug in capistrano recipe for restarting daemons
* Added log:truncate rake task
* Error mails now handled by TMail

== 0.1.7.3 2009-05-31

* Removed dependency on daemons gem, now handled in house
* New argument management
* Some more docs

== 0.1.7.1 2009-05-28

* Fixed some minor issue with Capistrano support
* Added support for generating dog/monit configuration files via rake
* Initial implementation of ./script/* utilities

== 0.1.7 2009-05-26

* Capistrano deployment support

== 0.1.6 2009-05-13

* DaemonKit::Safety class to handle the trapping and logging of
  exceptions, as well as email notifications or Hoptoad notifications.
* New config/pre-daemonize and config/post-daemonize structure
* New tasks to simplify upgrading daemon-kit projects
* Fixed some other annoyances and bugs
* Bigger TODO list

== 0.1.5 2009-05-07

* DaemonKit::Config class to easy the use of YAML configs internally,
  and in generated daemons

== 0.1.2 2009-04-28

* Added missing rubigen dependency

== 0.1.1 2009-04-27

* AMQP consumer generator added
* 'cron' style generator added
* Allow configuring dir_mode and dir (pid file location) (Jim Lindley)

== 0.1.0 2009-01-08

* Ability to freeze the gem/edge copies of DaemonKit
* Simple non-evented Jabber generator
* Flexible UNIX signal trapping configuration
* Basic generator completed
* 1 small step for man, 1 giant leap for mankind